deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  selector:
    matchLabels:
      app: app
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: tomrebibo/app:3
        ports:
        - containerPort: 5000


---
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  selector:
    app: app
  ports:
    - port: 5000
